# HSDAOH-MISRC-GUI

./: .gitignore  AGENTS.MD  CMakeLists-v1.txt  CMakeLists.txt  GUI_README.md  MISRC_GUI_README.md  README-cxcard-clkgen-Support.md  README-hsdaoh-Support.md  README.md  misrc_ddd_support_prompt.md  run_gui.sh
.claude/: settings.local.json
.fix-logs/: 2026-07-04-hsdaoh-upstream-windows-only.md
.github/workflows/: build.yml  flac-cache.yml  release-sanity-build.yml
assets/fonts/: generate_font_header.py
fftw-3.3.10/: FFTW3fConfig.cmake  Makefile  config.status  fftw.pc  libtool
fftw-3.3.10/.libs/: libfftw3f.lai
fftw-3.3.10/api/: Makefile
fftw-3.3.10/dft/: Makefile
fftw-3.3.10/dft/scalar/: Makefile
fftw-3.3.10/dft/simd/: Makefile
fftw-3.3.10/doc/: Makefile
fftw-3.3.10/doc/FAQ/: Makefile
fftw-3.3.10/genfft/: Makefile
fftw-3.3.10/kernel/: Makefile
fftw-3.3.10/libbench2/: Makefile
fftw-3.3.10/m4/: Makefile
fftw-3.3.10/mpi/: Makefile
fftw-3.3.10/rdft/: Makefile
fftw-3.3.10/rdft/scalar/: Makefile
fftw-3.3.10/rdft/simd/: Makefile
fftw-3.3.10/reodft/: Makefile
fftw-3.3.10/simd-support/: Makefile
fftw-3.3.10/support/: Makefile
fftw-3.3.10/tests/: Makefile  bench
fftw-3.3.10/threads/: Makefile
fftw-3.3.10/tools/: Makefile  fftwf-wisdom
flac-1.5.0/: Makefile  config.h  config.status  libtool
flac-1.5.0/doc/: Doxyfile  FLAC.tag  Makefile
flac-1.5.0/doc/api/: FLAC_09_09_2all_8h_source.html  FLAC_09_09_2export_8h.html  FLAC_09_09_2export_8h_source.html  FLAC_09_09_2metadata_8h.html  FLAC_09_09_2metadata_8h_source.html  FLAC_2all_8h_source.html  FLAC_2export_8h.html  FLAC_2export_8h_source.html  FLAC_2metadata_8h.html  FLAC_2metadata_8h_source.html  annotated.html  assert_8h_source.html  callback_8h.html  callback_8h_source.html  classFLAC_1_1Decoder_1_1File-members.html  classFLAC_1_1Decoder_1_1File.html  classFLAC_1_1Decoder_1_1Stream-members.html  classFLAC_1_1Decoder_1_1Stream.html  classFLAC_1_1Decoder_1_1Stream_1_1State-members.html  classFLAC_1_1Decoder_1_1Stream_1_1State.html  classFLAC_1_1Encoder_1_1File-members.html  classFLAC_1_1Encoder_1_1File.html  classFLAC_1_1Encoder_1_1Stream-members.html  classFLAC_1_1Encoder_1_1Stream.html  classFLAC_1_1Encoder_1_1Stream_1_1State-members.html  classFLAC_1_1Encoder_1_1Stream_1_1State.html  classFLAC_1_1Metadata_1_1Application-members.html  classFLAC_1_1Metadata_1_1Application.html  classFLAC_1_1Metadata_1_1Chain-members.html  classFLAC_1_1Metadata_1_1Chain.html  classFLAC_1_1Metadata_1_1Chain_1_1Status-members.html  classFLAC_1_1Metadata_1_1Chain_1_1Status.html  classFLAC_1_1Metadata_1_1CueSheet-members.html  classFLAC_1_1Metadata_1_1CueSheet.html  classFLAC_1_1Metadata_1_1CueSheet_1_1Track-members.html  classFLAC_1_1Metadata_1_1CueSheet_1_1Track.html  classFLAC_1_1Metadata_1_1Iterator-members.html  classFLAC_1_1Metadata_1_1Iterator.html  classFLAC_1_1Metadata_1_1Padding-members.html  (+169 more)
flac-1.5.0/examples/: Makefile
flac-1.5.0/include/: Makefile
flac-1.5.0/m4/: Makefile
flac-1.5.0/man/: Makefile
flac-1.5.0/oss-fuzz/: Makefile
flac-1.5.0/src/: Makefile
flac-1.5.0/test/: Makefile  common.sh
hsdaoh-ecd5f835ffad911e7b0b73d905e70cddc898c1ab/: CMakeLists.txt
hsdaoh-ecd5f835ffad911e7b0b73d905e70cddc898c1ab/include/: CMakeLists.txt  hsdaoh.h  hsdaoh_crc.h  hsdaoh_raw.h
hsdaoh-ecd5f835ffad911e7b0b73d905e70cddc898c1ab/src/: CMakeLists.txt  CMakeLists.txt.patched  libhsdaoh.c
libuvc-0.0.7/: CMakeLists.patched  CMakeLists.txt
misrc_gui/: gui_app.h  gui_capture.c  gui_cvbs.c  gui_cvbs.h  gui_dropdown.c  gui_dropdown.h  gui_extract.c  gui_extract.h  gui_oscilloscope.h  gui_panel.c  gui_panel.h  gui_record.c  gui_simulated.c  gui_text.h
misrc_tools/: README.md  git-version.sh  meson.build  misrc_capture.c  misrc_extract.c  version.h.in
misrc_tools/cmake/: CheckCPUArch.cmake
misrc_tools/common/: buffer.h  buffer_manager.c  buffer_manager.h  device_enum.c  device_enum.h  extract.c  extract.h  file_utils.c  file_utils.h  flac_writer.c  flac_writer.h  frame_parser.c  frame_parser.h  hsdaoh_compat.h  libusb_compat.h  misrc_debug.h  rb_event.c  rb_event.h  ringbuffer.c  ringbuffer.h  ringbuffer_writer.c  ringbuffer_writer.h  shm_anon.h  threading.h
misrc_tools/misrc_capture/: misrc_capture.c  misrc_extract.c
misrc_tools/misrc_capture/simple_capture/: simple_capture.h  simple_capture_avfoundation.m  simple_capture_v4l2.c
misrc_tools/misrc_gui/assets/: inter_font_data.h  misrc_gui.rc  misrc_icon_png_data.h  space_mono_font_data.h
misrc_tools/misrc_gui/core/: gui_app.h  gui_settings.c  misrc_gui.c
misrc_tools/misrc_gui/dev/: dev_notes_README.md
misrc_tools/misrc_gui/input/: gui_capture.c  gui_capture.h  gui_cxadc.c  gui_cxadc.h  gui_cxadc_pcm1802.c  gui_ddd.c  gui_ddd.h  gui_fx3.c  gui_fx3.h  gui_playback.c  gui_playback.h  gui_simulated.c  gui_simulated.h
misrc_tools/misrc_gui/input/cxadc-win/: cx_ctl_codes.h
misrc_tools/misrc_gui/output/: gui_audio.c  gui_audio.h  gui_record.c  gui_record.h
misrc_tools/misrc_gui/processing/: gui_display_thread.c  gui_display_thread.h  gui_extract.c  gui_extract.h
misrc_tools/misrc_gui/signal/: gui_cvbs.c  gui_cvbs.h  gui_headswitch_lock.c  gui_headswitch_lock.h  gui_histogram.c  gui_histogram.h  gui_trigger.c  gui_trigger.h
misrc_tools/misrc_gui/ui/: clay_renderer_raylib.c  gui_dropdown.c  gui_dropdown.h  gui_popup.c  gui_popup.h  gui_ui.c  gui_ui.h
misrc_tools/misrc_gui/visualization/: gui_custom_elements.h  gui_fft.c  gui_fft.h  gui_histogram_panel.c  gui_histogram_panel.h  gui_oscilloscope.c  gui_oscilloscope.h  gui_panel.c  gui_panel.h  gui_phosphor_rt.c  gui_phosphor_rt.h  gui_text.c  gui_text.h  gui_vu_meter.c  gui_vu_meter.h  panel_interface.h  panel_registry.c
misrc_tools/simple_capture/: simple_capture.h
misrc_tools/test/: bufmgr_record_fallback_harness.c  capture_stability_ci.sh  ci_guard_tests.py  extract_test.c
restore_points/: restore_20260713_092111_metadata_duration.md
scripts/: build-appimage-local.sh
soxr-437e06c739eb825f229b58fa50a565f33f82cbd3/src/: cr-core.c  dev32s.h  pffft-wrap.c  pffft.c
(+124 files in other folders)
